--- a/Rush Project/profile.html
+++ b/Rush Project/profile.html
@@ -40,10 +40,11 @@
   </div>
   
   
-    <div id ="home">
-      <h1 style="font-size: 5rem;">Welcome</h1>
-      <a href="#about" class="btn btn-light mt-3">Learn More</a>
-    </div>
+  <div id="home" class="d-flex flex-column justify-content-center align-items-center text-center vh-100 bg-light">
+    <h1 class="display-1">Welcome</h1>
+    <a href="#about" class="btn btn-dark mt-3">Learn More</a>
+  </div>
+  
 
    
 
@@ -134,7 +135,7 @@
 
   <section id="jedacon" class="bg-dark text-white text-center py-5">
     <div class="container">
-      <h2>Contact Me: Sarunchna</h2>
+      <h2>Contact Me: Sarunchana</h2>
       <p>Email: <a href="mailto:john@example.com" class="text-white">john@example.com</a></p>
       <p>Phone: +123456789</p>
       <a href="mailto:john@example.com" class="btn btn-light mt-3">Send Email</a>
