--- a/Rush Project/profile.html
+++ b/Rush Project/profile.html
@@ -94,7 +94,7 @@
     <div id="fangexper">
       <section id="experience" class="bg-light text-center py-5">
         <div class="container">
-          <h2 class="mb-4">Phornphatsorn<br>Experience & Skills</h2>
+          <h2 class="mb-4">Sarunchana<br>Experience & Skills</h2>
           <p><strong>Company ABC</strong> - Web Developer (2020–2023)</p>
           <ul class="list-unstyled">
           <li>Hard skill:SQL,Microsoft office,Excel,and Power Point</li>
@@ -110,7 +110,7 @@
   <div id="fangcon">
     <section id="contact" class="bg-dark text-white text-center py-5">
       <div class="container">
-        <h2>Contact Me: Phornphatsorn</h2>
+        <h2>Contact Me: Sarunchana</h2>
         <p>Email: <a href="" class="text-white">john@example.com</a></p>
         <p>Phone: 0253456789</p>
 
@@ -122,7 +122,7 @@
   <!-- Experience Section -->
   <section id="jedaexper" class="bg-light text-center py-5">
     <div class="container">
-      <h2 class="mb-4">Sarunchana<br>Experience & Skills</h2>
+      <h2 class="mb-4">Phornphatsorn<br>Experience & Skills</h2>
       <p><strong>Language</strong> - Thai and English (2020–2023)</p>
       <ul class="list-unstyled">
         <li>Hard skill:SQL,Microsoft office,Excel,and Power Point</li>
@@ -135,7 +135,7 @@
 
   <section id="jedacon" class="bg-dark text-white text-center py-5">
     <div class="container">
-      <h2>Contact Me: Sarunchana</h2>
+      <h2>Contact: Phornphatsorn</h2>
       <p>Email: <a href="mailto:john@example.com" class="text-white">john@example.com</a></p>
       <p>Phone: +123456789</p>
       <a href="mailto:john@example.com" class="btn btn-light mt-3">Send Email</a>
@@ -160,3 +160,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+ 
